--- a/src/elements/ne-textfield/_mixins.pcss
+++ b/src/elements/ne-textfield/_mixins.pcss
@@ -26,7 +26,7 @@
 
   &::placeholder {
     color: env(--textfieldPlaceholderForeground);
-    font-weight: 400;
+    font-weight: inherit;
   }
 
   &:hover {
